--- a/package.json
+++ b/package.json
@@ -1,16 +1,26 @@
 {
   "name": "so-jogo-moz-backend",
   "version": "1.0.0",
-  "main": "server.js",
+  "description": "Backend para o site de apostas So Jogo Moz.",
+  "main": "index.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
+  "author": "Seu Nome",
+  "license": "MIT",
   "dependencies": {
+    "axios": "^0.26.1",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "mongoose": "^5.10.9",
-    "dotenv": "^8.2.0",
-    "bcrypt": "^5.0.0",
     "jsonwebtoken": "^8.5.1",
-    "cors": "^2.8.5"
+    "mongodb": "^4.4.0",
+    "mongoose": "^6.1.4",
+    "dotenv": "^10.0.0",
+    "africastalking": "^1.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
